more spacing fixes

--- a/style.css
+++ b/style.css
@@ -10,12 +10,11 @@ h1 {
 
 #inputs {
     display: inline-grid;
-    grid-template-columns: 40% 40% 20%;
+    grid-template-columns: 40% auto 20%;
     background-color: rgba(255, 215, 0, 0.5);
     justify-content: center;
     padding: 20px;
     margin: 10px;
-    width: 100%;
     border-radius: 10px;
 }
 
@@ -43,7 +42,7 @@ input[type=number]::-webkit-outer-spin-button {
 #chart {
     background-color:white;
     border-radius: 10px;
-    margin: 10px;
+    max-width: 100%;
 }
 
 #open-inputs {
@@ -61,22 +60,17 @@ input[type=number]::-webkit-outer-spin-button {
     background-color: #444;
 }
 
-#chart {
-    width: 100%;
-}
-
 .sim {
     display: flex;
     flex-direction: column;
 }
 
+#outputs {
+    margin: 10px;
+}
+
 @media only screen and (min-width: 768px) {
     .sim {
         flex-direction: row;
-    }
-
-    #outputs {
-        flex-basis: 100%;
-        margin-right: 20px;
     }
 }
